# zadarest.py

./: .travis.yml  HISTORY.md  README.md  requirements.txt  setup.cfg  setup.py  test_requirements.txt  tox.ini
tests/: base.py  json_response_for_server.py  json_response_for_snapshot.py  json_response_for_volume.py  json_response_for_vpsa.py  test_server_endpoints.py  test_volume_endpoints.py  test_vpsa_endpoints.py  test_zconsole_client.py  test_zvpsa_client.py
zadarest/: __init__.py  rest_client.py  zadarest.py
zadarest/endpoints/: __init__.py  error.py  server.py  snapshot_policy.py  volume.py  vpsa.py
