[metadata]
name = zadarest
author = Naomi Maekawa
author-email = nmaekawa@g.harvard.edu
summary = Python client library for accessing Zadara API"
description-file = README.md
home-page = https://github.com/nmaekawa/zadarest
license = Apache-2
classifier =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
keywords =
    zadarest
[files]
packages =
    zadarest
#data_files =
#    etc/pbr = etc/*
#    etc/init =
#        pbr.packaging.conf
#        pbr.version.conf
#[entry_points]
#console_scripts =
#    pbr = pbr.cmd:main
#pbr.config.drivers =
#    plain = pbr.cfg.driver:Plain
